--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scroll": "^1.8.7",
     "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.1.3",
-    "react-typed": "^1.2.0",
+    "react-type-animation": "^3.2.0",
     "styled-components": "^5.3.6",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
